# InfraRed

./: .gitignore  CMakeLists.txt  README.md
assets/models/: Lumberjack.fbx  Lumberjack2.fbx  Sailor.blend  Sailor.blend1  Sailor.fbx  Shark.blend  Shark.fbx  Tank.FBX  Truck.fbx  (+1 more)
engine/: CMakeLists.txt  InfraRed.h
engine/application/: CMakeLists.txt  IFRApplication.cpp  IFRApplication.h
engine/asset_management/: AssetLoadingQueue.cpp  AssetLoadingQueue.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt
engine/asset_management/loaders/assimp/: AssimpLoader.cpp  AssimpLoader.h
engine/asset_management/loaders/scene/: IFRSceneLoader.cpp  IFRSceneLoader.h
engine/audio/: AudioEngine.cpp  AudioEngine.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt
engine/camera/: CMakeLists.txt  FPSCamera.cpp  FPSCamera.h  FreeRoamCamera.cpp  FreeRoamCamera.h  ICamera.cpp  ICamera.h  OrthographicCamera.cpp  OrthographicCamera.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
engine/core/: CMakeLists.txt  IFRBuild.h  IFRCore.h
engine/ecs/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  Components.h  Entity.cpp  Entity.h  IComponent.h
engine/ecs/components/: AnimatedRenderComponent.cpp  AnimatedRenderComponent.h  CMakeLists.txt  ColliderComponent.cpp  ColliderComponent.h  InformationComponent.cpp  InformationComponent.h  ScriptComponent.cpp  ScriptComponent.h  StaticRenderComponent.cpp  StaticRenderComponent.h  TransformComponent.cpp  TransformComponent.h
engine/ecs/systems/: CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.h  RenderComponentSystem.cpp  RenderComponentSystem.h  ScriptingSystem.cpp  ScriptingSystem.h
engine/events/: CMakeLists.txt  Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
engine/imgui/: CMakeLists.txt
engine/input/: CMakeLists.txt  Input.cpp  Input.h
engine/level/: CMakeLists.txt  Level.h  LevelManager.cpp  LevelManager.h
engine/logger/: CMakeLists.txt  Logger.cpp  Logger.h
engine/math/: CMakeLists.txt  IFRMath.cpp  IFRMath.h
engine/model_data/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationData.cpp  AnimationData.h  CMakeLists.txt  ModelData.cpp  ModelData.h  StaticModel.h
engine/model_data/Shapes/: Shapes.cpp  Shapes.h
engine/physics/: BoundingBox.cpp  BoundingBox.h  BoundingVolumes.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  ConvexHull.cpp  ConvexHull.h  OBB.cpp  OBB.h
engine/platform/: CMakeLists.txt  DirectXResources.cpp  DirectXResources.h
engine/platform/audio/: CMakeLists.txt  DirectXAudioSource.cpp  DirectXAudioSource.h
engine/platform/input/: CMakeLists.txt  DirectXInput.cpp  DirectXInput.h
engine/platform/rendering/: CMakeLists.txt  DirectXAdapterReader.cpp  DirectXAdapterReader.h  DirectXContext.cpp  DirectXContext.h  DirectXFrameBuffer.cpp  DirectXFrameBuffer.h  DirectXIndexBuffer.cpp  DirectXIndexBuffer.h  DirectXRenderingAPI.cpp  DirectXRenderingAPI.h  DirectXTexture.cpp  DirectXTexture.h  DirectXVertexArray.cpp  DirectXVertexArray.h  DirectXVertexBuffer.cpp  DirectXVertexBuffer.h
engine/platform/rendering/shaders/: DirectXShader.cpp  DirectXShader.h  DirectXShaderBuilder.cpp  DirectXShaderBuilder.h  DirectXUniformBuffer.cpp  DirectXUniformBuffer.h
engine/platform/rendering/shaders/hlsl/: Default.hlshader  DefaultAnim.hlshader  Skybox.hlshader  Water.hlshader
engine/platform/window/: CMakeLists.txt  DirectXWindow.cpp  DirectXWindow.h
engine/rendering/: BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RenderingAPI.h  RenderingContext.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexData.h
engine/rendering/shader_graph/: CMakeLists.txt  ShaderGraph.cpp  ShaderGraph.h  ShaderGraphNode.cpp  ShaderGraphNode.h  ShaderGraphNodesFunctions.cpp  ShaderGraphNodesFunctions.h  ShaderGraphNodesPrimitives.cpp  ShaderGraphNodesPrimitives.h
engine/rendering/shaders/: CMakeLists.txt  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  Shaders.cpp  Shaders.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferSlotMappings.h
engine/scene/: CMakeLists.txt  Grass.cpp  Grass.h  Light.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Water.cpp  Water.h
engine/stb_image/: CMakeLists.txt
engine/time/: CMakeLists.txt  Time.cpp  Time.h
engine/window/: CMakeLists.txt  Window.h
shaders/: DefaultGUI.hlshader  Grass.hlshader  OldTerrain.hlshader  Terrain.hlshader  TessellationShader.hlshader
tests/: CMakeLists.txt
tests/demo/: Application.cpp  Application.h  CMakeLists.txt  DemoLevel.cpp  DemoLevel.h  main.cpp
tests/tanks/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
tests/tanks/levels/: ArenaLevel.cpp  ArenaLevel.h  MainMenuLevel.cpp  MainMenuLevel.h
tests/tanks/scripts/: BulletScript.cpp  BulletScript.h  PlayerControlScript.cpp  PlayerControlScript.h
(+5 files in other folders)
