cmake_minimum_required(VERSION 3.10)

add_subdirectory(core)
add_subdirectory(application)
add_subdirectory(time)
add_subdirectory(logger)
add_subdirectory(window)
add_subdirectory(events)
add_subdirectory(input)
add_subdirectory(math)
add_subdirectory(stb_image)
add_subdirectory(imgui)
add_subdirectory(model_data)
add_subdirectory(rendering)
add_subdirectory(physics)
add_subdirectory(audio)
add_subdirectory(ecs)
add_subdirectory(scene)
add_subdirectory(level)
add_subdirectory(camera)
add_subdirectory(platform)
add_subdirectory(asset_management)

set(IFR_SOURCES ${IFR_SOURCES} PARENT_SCOPE)